# UCR-UAS-ROS

./: LICENSE
src/gimbalnode/: CMakeLists.txt  gimbalFunc.cpp  gimbalFunc.h  package.xml
src/gimbalnode/src/: PID_Func.cpp  PID_gimbal.h  ToEuler.cpp  ToEuler.h  gimbalFunc.cpp  gimbalFunc.h  maestroData.cpp  publishMaestro.cpp  quaternionPID.cpp  rotateServos.cpp  rotateServos.h
src/image_transport/: cv_bridge_mod.cpp  cv_bridge_mod.h
src/ucruasros/: CMakeLists.txt  package.xml
